# agentic_FinnGen

./: .gitignore  README.md  evaluate_capabilities.py  pyproject.toml
src/: logger.py  memory.py
src/agents/: analyst.py  coder.py  planner.py  researcher.py  reviewer.py
src/tools/: mcp_bridge.py  risteys_scraper.py
submission/: submission.ipynb  writeup.md
